examples/fail/semantic/method_unknown.bina
// EXPECT_SEMANTIC_ERROR: unknown method
struct Point {
    pub x: int32;
}

fn main() -> int {
    let p = Point { x: 1 };
    return p.value();
}
